--- a/mgs/mgs.csproj
+++ b/mgs/mgs.csproj
@@ -7,8 +7,10 @@
 
   <ItemGroup>
     <PackageReference Include="AngleSharp" Version="0.13.0" />
+    <PackageReference Include="ClosedXML" Version="0.94.2" />
     <PackageReference Include="Google.Apis.Sheets.v4" Version="1.43.0.1856" />
     <PackageReference Include="HtmlAgilityPack" Version="1.11.18" />
+    <PackageReference Include="MailKit" Version="2.6.0" />
     <PackageReference Include="Selenium.Support" Version="3.141.0" />
     <PackageReference Include="Selenium.WebDriver" Version="3.141.0" />
     <PackageReference Include="Selenium.WebDriver.ChromeDriver" Version="80.0.3987.1600" />
